added css file and updated popup to show multiple colors, and change background and font color

--- a/popup.html
+++ b/popup.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <style>
-        button {
-          height: 30px;
-          width: 30px;
-          outline: none;
-        }
-      </style>
+      <link rel="stylesheet" href="popup.css">
     </head>
     <body>
-      <button id="changeColor"></button>
+      <p>Choose a different background color!</p>
+      <div id="buttonDiv"> </div>
       <script src="popup.js"></script>
     </body>
   </html>
